# coding-practice

./: .gitignore  Justfile  pyproject.toml
aoj/python/0_1_knapsack_problem/: test.py
aoj/python/alds1_5_a/: input.txt
aoj/python/alds_1_10_a_fibonacci_number/: test.py
bash/ABC049C_hakuchumu/: test.sh
bash/jq_test/: filter_objects_by_array_value.sh  input.json
js/c_bfs/: test.js
python/083_b_some_sums/: test.py  test_10_count.py
python/085_b_kagami_mochi/: test.py
python/085_c_otoshidama/: test.py
python/alds1_4_B/: test.py
python/alds1_5_a/: test.py
python/alds_1_11_b/: test.py
python/aoj_1166_mazu/: test2.py
python/aoj_differential_pulse_code_modulation/: input.txt  test.py
python/aoj_pollocks_conjecture/: test.py
python/b_how_many_islands/: test.py
python/b_moores_law/: test.py
python/b_s8pc-4/: input.txt
python/breadth_first_search/: test.py
python/c_Average_Length/: test.py
python/c_Half_and_Half/: test.py
python/c_bfs/: input.txt
python/c_karaoke/: test.py
python/c_oldest_ruins/: test2.html
python/c_snuke_festival/: test.py
python/coin_changing_problem/: test.py
python/d_finding_sign/: test.py
python/d_hakuhyo_watari/: input.txt
python/d_hot_days/: test.py
python/d_ki/: input.txt
python/d_lucky_pin/: other_ans.py  test.py
python/d_paken_gunki/: test.py
python/d_pasta/: test_ans.py
python/d_shageki_king/: test.py
python/d_silk_road/: test.py
python/e_cheese/: graph.py  input.txt  test.py
python/e_illumination/: test.py
rust/alds_1_10_a_fibonacci_number/: Cargo.toml
rust/hogehoge/: test.rs
(+34 files in other folders)
